--- a/common/build.gradle
+++ b/common/build.gradle
@@ -15,6 +15,7 @@ dependencies {
     // Do NOT use other classes from fabric loader
     modImplementation "net.fabricmc:fabric-loader:${rootProject.fabric_loader_version}"
 
+//    include(implementation(annotationProcessor("io.github.llamalad7:mixinextras-fabric:0.4.0")))
     modApi("org.valkyrienskies:valkyrienskies-118-common:$vs2_version") { transitive = false }
 
     modImplementation("org.valkyrienskies.core:api:$vs_core_version")
