--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -28,6 +28,8 @@ dependencies {
     modImplementation "net.fabricmc:fabric-loader:${rootProject.fabric_loader_version}"
     modApi "net.fabricmc.fabric-api:fabric-api:${rootProject.fabric_api_version}"
 
+
+//    include(implementation(annotationProcessor("io.github.llamalad7:mixinextras-fabric:0.4.0")))
     common(project(path: ":common", configuration: "namedElements")) { transitive false }
     shadowCommon(project(path: ":common", configuration: "transformProductionFabric")) { transitive false }
 
