changed all instances of ClockworkAddons to ClockworkAdditions

--- a/build.gradle
+++ b/build.gradle
@@ -9,8 +9,8 @@ architectury {
 }
 
 forgix {
-    group = "com.github.guyapooye.clockworkaddons"
-    mergedJarName = "clockworkaddons"
+    group = "com.github.guyapooye.clockworkadditions"
+    mergedJarName = "clockworkadditions"
 }
 
 subprojects {
