--- a/forge/build.gradle
+++ b/forge/build.gradle
@@ -41,6 +41,7 @@ dependencies {
     implementation("org.valkyrienskies.core:util:$vs_core_version") { transitive = false }
     implementation("org.valkyrienskies.core:impl:$vs_core_version") { transitive = false }
 
+//    modImplementation("com.getitemfromblock.create_tweaked_controllers")
     modImplementation("com.simibubi.create:create-${minecraft_version}:${create_forge_version}:slim") { transitive = false }
     modImplementation("com.tterrag.registrate:Registrate:${registrate_forge_version}")
     modImplementation("com.jozufozu.flywheel:flywheel-forge-${flywheel_forge_minecraft_version}:${flywheel_forge_version}")
