--- a/gradle.properties
+++ b/gradle.properties
@@ -19,6 +19,7 @@ vs_core_version=1.1.0+8a93383ce5
 
 # Create - Fabric
 create_fabric_version=0.5.1-f-build.1333+mc1.18.2
+port_lib_version = 1.2.1304-beta
 
 # Create - Forge
 create_forge_version=0.5.1.f-332
