--- a/gradle.properties
+++ b/gradle.properties
@@ -1,32 +1,36 @@
 org.gradle.jvmargs=-Xmx4096M
 
-minecraft_version=1.18.2
+minecraft_version=1.20.1
 enabled_platforms=fabric,forge
 
 archives_base_name=ClockworkAdditions
-mod_version=1.0-SNAPSHOT
+mod_version=1.20.1-0.0.4
 maven_group=com.github.guyapooye
 
 architectury_version=${ARCHITECTURY_API_VERSION}
 
 fabric_loader_version=0.15.9
-fabric_api_version=0.77.0+1.18.2
+fabric_api_version=0.92.0+1.20.1
 
-forge_version=1.18.2-40.2.15
+forge_version=1.20.1-47.2.0
 
-vs2_version=2.1.1-beta.6+1705b550dd
+vs2_version=2.1.3-beta.1+a52f38bd68
 vs_core_version=1.1.0+8a93383ce5
 
 # Create - Fabric
-create_fabric_version=0.5.1-f-build.1333+mc1.18.2
-port_lib_version = 1.2.1304-beta
+create_fabric_version=0.5.1-f-build.1335+mc1.20.1
+port_lib_version = 2.3.3
 
 # Create - Forge
-create_forge_version=0.5.1.f-332
+create_forge_version=0.5.1.f-26
 registrate_forge_version=MC1.18.2-1.1.3
-flywheel_forge_minecraft_version=1.18.2
-flywheel_forge_version=0.6.10-105
+flywheel_forge_minecraft_version=1.20.1
+flywheel_forge_version=0.6.10-7
 
 mixinextras_version=0.3.5
+
+config_api_id = 3671141
+forge_config_api_port_version = 3.2.0
+port_lib_hash = 7f5751f
 
 forge_kotlin_version=3.12.0
