--- a/common/build.gradle
+++ b/common/build.gradle
@@ -14,7 +14,7 @@ dependencies {
     // We depend on fabric loader here to use the fabric @Environment annotations and get the mixin dependencies
     // Do NOT use other classes from fabric loader
     modImplementation "net.fabricmc:fabric-loader:${rootProject.fabric_loader_version}"
-
+    modApi "net.fabricmc.fabric-api:fabric-api:${rootProject.fabric_api_version}"
 //    include(implementation(annotationProcessor("io.github.llamalad7:mixinextras-fabric:0.4.0")))
     modApi("org.valkyrienskies:valkyrienskies-118-common:$vs2_version") { transitive = false }
 
