--- a/gradle.properties
+++ b/gradle.properties
@@ -4,8 +4,9 @@ minecraft_version=1.18.2
 enabled_platforms=fabric,forge
 
 archives_base_name=ClockworkAdditions
-mod_version=1.0-SNAPSHOT
+mod_version=1.18.2-0.0.5
 maven_group=com.github.guyapooye
+loader_platform=Common
 
 architectury_version=${ARCHITECTURY_API_VERSION}
 
