--- a/forge/build.gradle
+++ b/forge/build.gradle
@@ -51,7 +51,7 @@ dependencies {
 
     compileOnly("io.github.llamalad7:mixinextras-common:${mixinextras_version}")
     annotationProcessor(implementation(include("io.github.llamalad7:mixinextras-forge:${mixinextras_version}")))
-    modImplementation(files("libs/clockwork-1-20-1-forge.jar"))
+    modImplementation(files("libs/clockwork-1.20.1-forge.jar"))
 
     implementation("org.joml:joml:1.10.5")
     implementation("org.joml:joml-primitives:1.10.0")
