--- a/build.gradle
+++ b/build.gradle
@@ -1,25 +1,16 @@
 plugins {
-    // Needed for Forge+Fabric
-    id "architectury-plugin" version "3.4.146"
-    id "dev.architectury.loom" version "1.3.355" apply false
-    // Kotlin
-    id "org.jetbrains.kotlin.jvm" version "1.9.10" apply false
-    // Kotlin linter
-    id "org.jlleitschuh.gradle.ktlint" version "10.3.0"
-    // Java linter
-    id "checkstyle"
-
-    id 'com.matthewprenger.cursegradle' version '1.4.0' apply false
-    id "com.modrinth.minotaur" version "2.4.5" apply false
+    id "architectury-plugin" version "3.4-SNAPSHOT"
+    id "dev.architectury.loom" version "1.5-SNAPSHOT" apply false
+    id "io.github.pacifistmc.forgix" version "1.2.6"
 }
-
-// Determine the version
-String platform = String.valueOf(loader_platform).toLowerCase()
-
-version = minecraft_version + "-" + platform + "-" + mod_version
 
 architectury {
     minecraft = rootProject.minecraft_version
+}
+
+forgix {
+    group = "com.github.guyapooye.clockworkadditions"
+    mergedJarName = "ClockworkAdditions-${mod_version}.jar"
 }
 
 subprojects {
@@ -29,52 +20,12 @@ subprojects {
         silentMojangMappingsLicense()
     }
 
-    repositories {
-        maven {
-            name = "ParchmentMC"
-            url = "https://maven.parchmentmc.org"
-        }
-    }
-
     dependencies {
         minecraft "com.mojang:minecraft:${rootProject.minecraft_version}"
         // The following line declares the mojmap mappings, you may use other mappings as well
-        mappings(loom.layered {
-            officialMojangMappings()
-            parchment("org.parchmentmc.data:parchment-1.18.2:2022.09.04@zip")
-        })
-
-        implementation("org.joml:joml:1.10.4") { transitive = false }
-        implementation("org.joml:joml-primitives:1.10.0") { transitive = false }
-    }
-
-    checkstyle {
-        // configure to use checkstyle v8.41
-        toolVersion "8.41"
-        // Gradle shouldn't fail builds on checkstyle errors
-        ignoreFailures = true
-        // Checkstyle config file is in .checkstyle/checkstyle.xml
-        configFile = file("${rootDir}/.checkstyle/checkstyle.xml")
-    }
-
-    // configure checkstyle, but different
-    // https://docs.gradle.org/current/userguide/checkstyle_plugin.html
-    tasks.withType(Checkstyle) {
-        reports {
-            // Do not output html reports
-            html.required = false
-            // Output xml reports
-            xml.required = true
-        }
-    }
-
-    // configure ktlint
-    ktlint {
-        ignoreFailures = true
-        reporters {
-            // configure to output in checkstyle XML format
-            reporter "checkstyle"
-        }
+        mappings loom.officialMojangMappings()
+        // The following line declares the yarn mappings you may select this one as well.
+        // mappings "net.fabricmc:yarn:@YARN_MAPPINGS@:v2"
     }
 }
 
@@ -84,26 +35,25 @@ allprojects {
     apply plugin: "maven-publish"
 
     archivesBaseName = rootProject.archives_base_name
-    version = rootProject.version
+    version = rootProject.mod_version
     group = rootProject.maven_group
 
     repositories {
         mavenLocal()
         maven {
-            name = 'Kotlin for Forge'
-            url = 'https://thedarkcolour.github.io/KotlinForForge/'
-            content { includeGroup "thedarkcolour" }
-        }
-        maven {
             name = "Valkyrien Skies Internal"
             url = 'https://maven.valkyrienskies.org'
         }
+        // Add repositories to retrieve artifacts from in here.
+        // You should only use this when depending on other mods because
+        // Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
+        // See https://docs.gradle.org/current/userguide/declaring_repositories.html
+        // for more information about repositories.
     }
 
     tasks.withType(JavaCompile) {
         options.encoding = "UTF-8"
-
-        options.release = 17
+        options.release.set(17)
     }
 
     java {
