copycat wings/flaps now use connected texture

--- a/gradle.properties
+++ b/gradle.properties
@@ -16,7 +16,9 @@ fabric_api_version=0.77.0+1.18.2
 forge_version=1.18.2-40.2.15
 
 vs2_version=2.1.1-beta.6+1705b550dd
+#2.1.1-beta.6+1705b550dd
 vs_core_version=1.1.0+8a93383ce5
+#1.1.0+8a93383ce5
 
 # Create - Fabric
 create_fabric_version=0.5.1-f-build.1333+mc1.18.2
